# monitoring-postprocessing

monitoring_packages/: pyproject.toml
monitoring_packages/datasets/datasets_QPU147/: 20251004_1_Q0_coherence_monitoring_log.csv  20251005_Q0_coherence_monitoring_log.csv  20251006_1_Q0_coherence_monitoring_log.csv  20251006_2_Q0_coherence_monitoring_log.csv  20251006_3_Q0_coherence_monitoring_log.csv  20251006_4_Q0_coherence_monitoring_log.csv  20251010_Q4_coherence_monitoring_log.csv  20251013_Q4_coherence_monitoring_log.csv  20251014_1_Q4_coherence_monitoring_log.csv  20251014_2_Q4_coherence_monitoring_log.csv  20251015_Q4_coherence_monitoring_log.csv  20251016_Q4_coherence_monitoring_log.csv  20251017_Q0_coherence_monitoring_log.csv  20251019_Q0_coherence_monitoring_log.csv  20251022_Q4_coherence_monitoring_log.csv  20251028_Q4_coherence_monitoring_log.csv  daily_coherence_summary.csv  merged_coherence_data.csv
monitoring_packages/datasets/datasets_QPU149/: 20251118_coherence_monitoring_log_q3.csv  20251121_coherence_monitoring_log_q2.csv  20251123_coherence_monitoring_log_q3.csv  20251124_coherence_monitoring_log_q1.csv  merged_coherence_data.csv
monitoring_packages/monitoring_postprocessing/: README.md  __init__.py  api.py  convert_excel_to_csv.py  io_utils.py  plotting.py  processing.py  requirements.txt
monitoring_packages/monitoring_postprocessing.egg-info/: SOURCES.txt  top_level.txt
monitoring_packages/monitoring_postprocessing_beta/: __init__.py  monitoring_combined.py  monitoring_postprocessing.py
notebooks/: individual_monitoring.ipynb  (+7 more)
(+5 files in other folders)
